added functionality to revert to previous version of the threat model in case of errors during reply.
