# backend/app/routes/threat_designer_route.py
@@ -1,11 +1,17 @@
 from aws_lambda_powertools import Logger, Tracer
 from aws_lambda_powertools.event_handler.api_gateway import Router
-from services.threat_designer_service import (check_status, check_trail,
-                                              delete_tm, fetch_all,
-                                              fetch_results,
-                                              generate_presigned_download_url,
-                                              generate_presigned_url,
-                                              invoke_lambda, update_results)
+from services.threat_designer_service import (
+    check_status,
+    check_trail,
+    delete_tm,
+    fetch_all,
+    fetch_results,
+    generate_presigned_download_url,
+    generate_presigned_url,
+    invoke_lambda,
+    update_results,
+    restore
+)
 
 tracer = Tracer()
 router = Router()
@@ -37,6 +43,11 @@ def _tm_start():
     except Exception as e:
         LOG.exception(e)
 
+@router.put("/threat-designer/restore/<id>")
+def _restore(id):
+    body = router.current_event.json_body
+    owner = router.current_event.request_context.authorizer.get("username")
+    return restore(id, owner)
 
 @router.get("/threat-designer/all")
 def _fetch_all():
